Update swagger with status codes
